--- a/NaukriClone-main/package.json
+++ b/NaukriClone-main/package.json
@@ -4,7 +4,7 @@
   "description": "Basic Crud Application Using Nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "node index",
+    "start": "node index",
     "dev": "nodemon index"
   },
   "keywords": [
